<resources>
    <string name="app_name">ARMS-Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="car_manufacturer">Manufacturer</string>
    <string name="car_model">Model</string>
    <string name="car_year">Year</string>
    <string name="car_plateNo">Plate Number</string>
    <string name="action_add_car">Add Car</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>